add `getUserById` endpoint
